2005-12-07  Stipe Tolj  <stolj at kannel.org>
   * doc/userguide/userguide.xml: add new 'remote-timeout' directive to RADIUS
     accounting proxy section.
   * gwlib/cfg.def: adding 'remote-timout' to 'radius-acct' group.
   * radius/radius_acct.c: fixing blocking state if remote RADIUS does not
     answer within pre-defined timeout. This ensures that the proxy operation
     continues. Thanks to Deon van der Merwe <deonvandermerwe@gmail.com> for 
     this fix and included patch.
     [Msg-Id: <a9bcf42b0512070336x6e323b2eg9663a4e519abdd3e@mail.gmail.com]
     
2005-11-29  Stipe Tolj  <stolj at kannel.org>
   * Makefile.in: adding 'install' target components for wap library, including
     heaeders. Mainly this is a sync towards compatibility needs from Mbuni
     MMS gateway project.

2005-11-11  Alexander Malysh <amalysh at kannel.org>
   * gwlib/counter.c: allow calling counter_destroy with a NULL just for 
     convenience.

2005-11-11  Alexander Malysh <amalysh at kannel.org>
   * gw/bb_store.c: fixed race condition when dumping into the new file but in
     the meantime some messages will be already stored in the Dictionary. 
     Generally means: synchronize file and Dictionary contents. Fixed bug #248.
   * gw/bearerbox.c: added panic for the case store_init call fail.

2005-11-10  Stipe Tolj  <stolj at kannel.org>
   * doc/userguide/userguide.xml, gw/bb_smscconn.c, gwlib/cfg.def: veto'ed 
     against naming convention for the 2 new config directives and changed them
     to 'sms-resend-freq' and 'sms-resend-retry'.
   
2005-11-09  Stipe Tolj  <stolj@wapme-group.de>
   * doc/userguide/userguide.xml: fixing default values for parameters within
     the user's guide. Thanks to Dziugas Baltrunas <dziugas@gmail.com> for this.
     [Msg-Id: <943470880511081236t74d1556me79aa8611611115b@mail.gmail.com>]

2005-11-08  Alexander Malysh <amalysh at kannel.org>
   * doc/userguide/userguide.xml, gw/bb_smscconn.c, gw/msg-decl.h,