@@ -70,6 +70,7 @@ WAPAddr *wap_addr_create(Octstr *address, long port)
     
     addr = gw_malloc(sizeof(*addr));
     addr->address = octstr_duplicate(address);
+    addr->iaddr = inet_addr(octstr_get_cstr(address));
     addr->port = port;
     return addr;
 }
@@ -78,15 +79,16 @@ WAPAddr *wap_addr_create(Octstr *address, long port)
 void wap_addr_destroy(WAPAddr *addr) 
 {
     if (addr != NULL) {
-	octstr_destroy(addr->address);
-	gw_free(addr);
+        octstr_destroy(addr->address);
+        gw_free(addr);
     }
 }
 
 
 int wap_addr_same(WAPAddr *a, WAPAddr *b) 
 {
-    return a->port == b->port && octstr_compare(a->address, b->address) == 0;
+    /* XXX which ordering gives the best heuristical performance? */
+    return a->port == b->port && a->iaddr == b->iaddr;
 }
 
 
