@@ -1,3 +1,9 @@
+2005-12-08  Stipe Tolj  <stolj at kannel.org>
+   * wap/wap_addr.[ch]: performance gain by using int compare rather then
+     Octstr compare within wap_addr_same(). We need to call this at various
+     places within the WAP layers and this will increase peformance on 
+     significantly on production high-load systems.
+
 2005-12-07  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: add new 'remote-timeout' directive to RADIUS
      accounting proxy section.
